--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -6,10 +6,13 @@ env:
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
 jobs:
-  rockylinux-9:
+  collect-data:
+    strategy:
+      matrix:
+        version: [9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5]
     runs-on: ubuntu-latest
     container:
-      image: rockylinux:9
+      image: rockylinux:${{ matrix.version }}
     steps:
       - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
       - run: gem install facter
@@ -19,163 +22,17 @@ jobs:
       - run: facter --yaml > data/facter.yaml
       - uses: actions/upload-artifact@master
         with:
-          name: rockylinux-9-facter
+          name: rockylinux-${{ matrix.version }}-facter
           path: data/
-  rockylinux-9_3:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:9.3
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-9.3-facter
-          path: data/
-  rockylinux-9_2:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:9.2
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-9.2-facter
-          path: data/
-  rockylinux-9_1:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:9.1
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-9.1-facter
-          path: data/
-  rockylinux-8:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8-facter
-          path: data/
-  rockylinux-8_9:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8.9
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8.9-facter
-          path: data/
-  rockylinux-8_8:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8.8
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8.8-facter
-          path: data/
-  rockylinux-8_7:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8.7
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8.7-facter
-          path: data/
-  rockylinux-8_6:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8.6
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8.6-facter
-          path: data/
-  rockylinux-8_5:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:8.5
-    steps:
-      - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
-      - run: gem install facter
-      - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
-        with:
-          name: rockylinux-8.5-facter
-          path: data/
-
-  consolidate:
+  consolidate-data:
     needs:
-      - rockylinux-9
-      - rockylinux-9_3
-      - rockylinux-9_2
-      - rockylinux-9_1
-      - rockylinux-8
-      - rockylinux-8_9
-      - rockylinux-8_8
-      - rockylinux-8_7
-      - rockylinux-8_6
-      - rockylinux-8_5
+      - collect-data
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
-      - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
-      - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
+
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
       - uses: actions/download-artifact@master
         with:
@@ -226,6 +83,8 @@ jobs:
         with:
           name: rockylinux-8.5-facter
           path: data/github-actions-rockylinux/rockylinux-8.5/
+      - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
+      - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
       - run: git add -A
       - run: git commit data/github-actions-rockylinux/rockylinux-9/* -m "Update data for Rocky Linux 9 via GitHub Actions."
       - run: git commit data/github-actions-rockylinux/rockylinux-9.3/* -m "Update data for Rocky Linux 9.3 via GitHub Actions."
