--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -1,5 +1,5 @@
 ---
-name: Rocky Linux system info via GitHub Actions
+key: rocky Linux system info via GitHub Actions
 on: [workflow_dispatch]
 env:
   RUBY_VERSION: 3.1
@@ -17,13 +17,13 @@ jobs:
       - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
       - run: gem install facter
       - run: mkdir -p data
-      - run: facter --hocon > data/facter.hocon
-      - run: facter --json > data/facter.json
-      - run: facter --yaml > data/facter.yaml
-      - uses: actions/upload-artifact@master
+      - run: facter --hocon > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.hocon
+      - run: facter --json > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.json
+      - run: facter --yaml > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.yaml
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-${{ matrix.version }}-facter
-          path: data/
+          key: rockylinux-${{ matrix.version }}-cache
+          path: data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/
   consolidate-data:
     needs:
       - collect-data
@@ -34,54 +34,54 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
 
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-9-facter
+          key: rockylinux-9-cache
           path: data/github-actions-rockylinux/rockylinux-9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.3/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-9.3-facter
+          key: rockylinux-9.3-cache
           path: data/github-actions-rockylinux/rockylinux-9.3/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.2/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-9.2-facter
+          key: rockylinux-9.2-cache
           path: data/github-actions-rockylinux/rockylinux-9.2/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.1/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-9.1-facter
+          key: rockylinux-9.1-cache
           path: data/github-actions-rockylinux/rockylinux-9.1/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8-facter
+          key: rockylinux-8-cache
           path: data/github-actions-rockylinux/rockylinux-8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.9/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8.9-facter
+          key: rockylinux-8.9-cache
           path: data/github-actions-rockylinux/rockylinux-8.9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.8/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8.8-facter
+          key: rockylinux-8.8-cache
           path: data/github-actions-rockylinux/rockylinux-8.8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.7/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8.7-facter
+          key: rockylinux-8.7-cache
           path: data/github-actions-rockylinux/rockylinux-8.7/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.6/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8.6-facter
+          key: rockylinux-8.6-cache
           path: data/github-actions-rockylinux/rockylinux-8.6/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.5/*
-      - uses: actions/download-artifact@master
+      - uses: actions/cache@v4
         with:
-          name: rockylinux-8.5-facter
+          key: rockylinux-8.5-cache
           path: data/github-actions-rockylinux/rockylinux-8.5/
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
