--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -20,7 +20,7 @@ jobs:
       - run: facter --hocon > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.hocon
       - run: facter --json > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.json
       - run: facter --yaml > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.yaml
-      - uses: actions/cache@v4
+      - uses: actions/cache/save@v4
         with:
           key: rockylinux-${{ matrix.version }}-cache
           path: data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/
@@ -34,52 +34,52 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
 
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-9-cache
           path: data/github-actions-rockylinux/rockylinux-9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.3/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-9.3-cache
           path: data/github-actions-rockylinux/rockylinux-9.3/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.2/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-9.2-cache
           path: data/github-actions-rockylinux/rockylinux-9.2/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.1/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-9.1-cache
           path: data/github-actions-rockylinux/rockylinux-9.1/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8-cache
           path: data/github-actions-rockylinux/rockylinux-8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.9/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8.9-cache
           path: data/github-actions-rockylinux/rockylinux-8.9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.8/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8.8-cache
           path: data/github-actions-rockylinux/rockylinux-8.8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.7/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8.7-cache
           path: data/github-actions-rockylinux/rockylinux-8.7/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.6/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8.6-cache
           path: data/github-actions-rockylinux/rockylinux-8.6/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.5/*
-      - uses: actions/cache@v4
+      - uses: actions/cache/restore@v4
         with:
           key: rockylinux-8.5-cache
           path: data/github-actions-rockylinux/rockylinux-8.5/
