--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -22,7 +22,7 @@ jobs:
       - run: facter --yaml > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.yaml
       - uses: actions/cache/save@v4
         with:
-          key: rockylinux-${{ matrix.version }}-cache-${{ hashFiles('**/*') }}
+          key: rockylinux-${{ matrix.version }}-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/
   consolidate-data:
     needs:
@@ -36,52 +36,52 @@ jobs:
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-9-cache
+          key: rockylinux-9-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.3/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-9.3-cache
+          key: rockylinux-9.3-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-9.3/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.2/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-9.2-cache
+          key: rockylinux-9.2-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-9.2/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.1/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-9.1-cache
+          key: rockylinux-9.1-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-9.1/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8-cache
+          key: rockylinux-8-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.9/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8.9-cache
+          key: rockylinux-8.9-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8.9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.8/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8.8-cache
+          key: rockylinux-8.8-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8.8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.7/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8.7-cache
+          key: rockylinux-8.7-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8.7/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.6/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8.6-cache
+          key: rockylinux-8.6-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8.6/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.5/*
       - uses: actions/cache/restore@v4
         with:
-          key: rockylinux-8.5-cache
+          key: rockylinux-8.5-cache-${{ github.run_number }}
           path: data/github-actions-rockylinux/rockylinux-8.5/
       - run: pwd
       - run: find .
