--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -16,14 +16,14 @@ jobs:
     steps:
       - run: yum install -y @ruby:${{ env.RUBY_VERSION }}
       - run: gem install facter
-      - run: mkdir -p data/github-actions-rockylinux/rockylinux-${{ matrix.version }}
+      - run: mkdir -p data
       - run: facter --hocon > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.hocon
       - run: facter --json > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.json
       - run: facter --yaml > data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/facter.yaml
-      - uses: actions/cache/save@v4
+      - uses: actions/upload-artifact@master
         with:
-          key: rockylinux-${{ matrix.version }}-cache-${{ github.run_number }}
-          path: data/github-actions-rockylinux/rockylinux-${{ matrix.version }}/
+          name: rockylinux-${{ matrix.version }}-artifacts
+          path: data/
   consolidate-data:
     needs:
       - collect-data
@@ -34,57 +34,55 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
 
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-9-cache-${{ github.run_number }}
+          name: rockylinux-9-artifacts
           path: data/github-actions-rockylinux/rockylinux-9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.3/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-9.3-cache-${{ github.run_number }}
+          name: rockylinux-9.3-artifacts
           path: data/github-actions-rockylinux/rockylinux-9.3/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.2/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-9.2-cache-${{ github.run_number }}
+          name: rockylinux-9.2-artifacts
           path: data/github-actions-rockylinux/rockylinux-9.2/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.1/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-9.1-cache-${{ github.run_number }}
+          name: rockylinux-9.1-artifacts
           path: data/github-actions-rockylinux/rockylinux-9.1/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8-cache-${{ github.run_number }}
+          name: rockylinux-8-artifacts
           path: data/github-actions-rockylinux/rockylinux-8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.9/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8.9-cache-${{ github.run_number }}
+          name: rockylinux-8.9-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.8/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8.8-cache-${{ github.run_number }}
+          name: rockylinux-8.8-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.7/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8.7-cache-${{ github.run_number }}
+          name: rockylinux-8.7-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.7/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.6/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8.6-cache-${{ github.run_number }}
+          name: rockylinux-8.6-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.6/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.5/*
-      - uses: actions/cache/restore@v4
+      - uses: actions/download-artifact@master
         with:
-          key: rockylinux-8.5-cache-${{ github.run_number }}
+          name: rockylinux-8.5-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.5/
-      - run: pwd
-      - run: find .
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
       - run: git add -A
