--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -83,7 +83,7 @@ jobs:
         with:
           name: rockylinux-8.5-artifacts
           path: data/github-actions-rockylinux/rockylinux-8.5/
-      - uses: cliffano/matrix-shell-action@master
+      - uses: cliffano/matrix-shell-action@main
         with:
           matrix: '{ "name": ["app", "boo", "cap"] }'
           command: hello ${{ '${{ matrix.name }}' }}
