--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -32,61 +32,19 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
-
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-9-artifacts
-          path: data/github-actions-rockylinux/rockylinux-9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.3/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-9.3-artifacts
-          path: data/github-actions-rockylinux/rockylinux-9.3/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.2/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-9.2-artifacts
-          path: data/github-actions-rockylinux/rockylinux-9.2/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-9.1/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-9.1-artifacts
-          path: data/github-actions-rockylinux/rockylinux-9.1/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-8-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.9/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-8.9-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8.9/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.8/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-8.8-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8.8/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.7/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-8.7-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8.7/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.6/*
-      - uses: actions/download-artifact@master
-        with:
-          name: rockylinux-8.6-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8.6/
       - run: rm -rf data/github-actions-rockylinux/rockylinux-8.5/*
       - uses: actions/download-artifact@master
         with:
-          name: rockylinux-8.5-artifacts
-          path: data/github-actions-rockylinux/rockylinux-8.5/
-      - uses: cliffano/matrix-shell-action@main
-        with:
-          matrix: '{ "name": ["app", "boo", "cap"] }'
-          command: hello ${{ '${{ matrix.name }}' }}
+          path: data/
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
       - run: git add -A
