--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -5,6 +5,7 @@ env:
   RUBY_VERSION: 3.1
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
+  VERSIONS: '9 9.3 9.2 9.1 8 8.9 8.8 8.7 8.6 8.5'
 jobs:
   collect-data:
     strategy:
@@ -33,30 +34,20 @@ jobs:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
       - uses: cliffano/command-loop-action@main
         with:
-          items: '9 9.3 9.2 9.1 8 8.9 8.8 8.7 8.6 8.5'
+          items: ${{ env.VERSIONS }}
           command: 'rm -rf data/github-actions-rockylinux/rockylinux-$ITEM/*'
       - run: mkdir -p data/github-actions-rockylinux
       - uses: actions/download-artifact@master
         with:
           path: data/github-actions-rockylinux
-      - run: pwd
-      - run: find data/
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
       - run: git add -A
-      - run: git commit data/github-actions-rockylinux/rockylinux-9/* -m "Update data for Rocky Linux 9 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-9.3/* -m "Update data for Rocky Linux 9.3 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-9.2/* -m "Update data for Rocky Linux 9.2 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-9.1/* -m "Update data for Rocky Linux 9.1 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8/* -m "Update data for Rocky Linux 8 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8.9/* -m "Update data for Rocky Linux 8.9 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8.8/* -m "Update data for Rocky Linux 8.8 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8.7/* -m "Update data for Rocky Linux 8.7 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8.6/* -m "Update data for Rocky Linux 8.6 via GitHub Actions."
-      - run: git commit data/github-actions-rockylinux/rockylinux-8.5/* -m "Update data for Rocky Linux 8.5 via GitHub Actions."
-      - run: git status
+      - uses: cliffano/command-loop-action@main
+        with:
+          items: ${{ env.VERSIONS }}
+          command: 'git commit data/github-actions-rockylinux/rockylinux-$ITEM/* -m "Update data for Rocky Linux $ITEM via GitHub Actions.'
       - run: git pull --rebase
-      - run: git status
       - uses: ad-m/github-push-action@master
         with:
           tags: true
