--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -5,7 +5,7 @@ env:
   RUBY_VERSION: 3.1
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
-  VERSIONS: '9 9.3 9.2 9.1 8 8.9 8.8 8.7 8.6 8.5'
+  VERSIONS: '9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5'
 jobs:
   collect-data:
     strategy:
