Try using env VERSIONS for matrix strategy.

--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -10,7 +10,7 @@ jobs:
   collect-data:
     strategy:
       matrix:
-        version: [9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5]
+        version: ${{ env.VERSIONS.split(', ') }}
     runs-on: ubuntu-latest
     container:
       image: rockylinux:${{ matrix.version }}
