Add artifact retention and compression level.

--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -24,6 +24,8 @@ jobs:
         with:
           name: rockylinux-${{ matrix.version }}
           path: ./
+          retention-days: 1
+          compression-level: 0
   consolidate-data:
     needs:
       - collect-data
