Revert "Add ruby-3.3 ."
This reverts commit c3f46d55869e19e17eefd75e29719adee234142d.

--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -4,12 +4,12 @@ on: [workflow_dispatch]
 env:
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
-  VERSIONS: 'latest, 3, 3.3, 3.2, 2, 2.7, 2.5'
+  VERSIONS: 'latest, 3, 3.2, 2, 2.7, 2.5'
 jobs:
   collect-data:
     strategy:
       matrix:
-        version: [latest, 3, 3.3, 3.2, 2, 2.7, 2.5]
+        version: [latest, 3, 3.2, 2, 2.7, 2.5]
     runs-on: ubuntu-latest
     container:
       image: public.ecr.aws/lambda/ruby:${{ matrix.version }}
