--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -18,7 +18,7 @@ jobs:
       - run: facter --hocon > facter.hocon
       - run: facter --json > facter.json
       - run: facter --yaml > facter.yaml
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@master
         with:
           name: ruby-${{ matrix.version }}
           path: ./
@@ -29,7 +29,7 @@ jobs:
       - collect-data
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.STUDIO_GITHUB_TOKEN }}
       - uses: cliffano/command-loop-action@main
