--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -18,12 +18,12 @@ jobs:
       - run: facter --hocon > facter.hocon
       - run: facter --json > facter.json
       - run: facter --yaml > facter.yaml
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v3
         with:
           name: ruby-${{ matrix.version }}
           path: ./
           retention-days: 1
-          compression-level: 0
+          # compression-level: 0
   consolidate-data:
     needs:
       - collect-data
