--- a/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
+++ b/.github/workflows/github-actions-aws-lambda-runtimes-workflow.yaml
@@ -43,6 +43,7 @@ jobs:
       - run: git config --global user.email "${{ env.GIT_USER_EMAIL }}"
       - run: git config --global user.name "${{ env.GIT_USER_NAME }}"
       - run: git add -A
+      - run: git status
       - uses: cliffano/command-loop-action@main
         with:
           items: ${{ env.VERSIONS }}
