--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         version: [latest, 9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-${{ matrix.version }}
     container:
       image: rockylinux:${{ matrix.version }}
     steps:
