Remove inexisting rockylinux:latest.

--- a/.github/workflows/github-actions-rockylinux-workflow.yaml
+++ b/.github/workflows/github-actions-rockylinux-workflow.yaml
@@ -5,12 +5,12 @@ env:
   RUBY_VERSION: 3.1
   GIT_USER_EMAIL: blah+pakkun@cliffano.com
   GIT_USER_NAME: pakkunbot
-  VERSIONS: 'latest, 9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5'
+  VERSIONS: '9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5'
 jobs:
   collect-data:
     strategy:
       matrix:
-        version: [latest, 9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5]
+        version: [9, 9.3, 9.2, 9.1, 8, 8.9, 8.8, 8.7, 8.6, 8.5]
     runs-on: ubuntu-${{ matrix.version }}
     container:
       image: rockylinux:${{ matrix.version }}
